--- a/RMS/data/dashboard.html
+++ b/RMS/data/dashboard.html
@@ -21,7 +21,7 @@
     <div class="banner">Title</div>
     <div><p>Date and Time </p>
         <p>%DATETIME% *</p></div>
-    <div></div>
+    <div><p>Current Temperature</p><p>%TEMPERATURE%</p></div>
     <div>LogEvents<p><a href="/logOutput">Download</a></div>
     <div>
         <p><a href="/LEDOn">Turn LED On</a></p>
