--- a/RMS/data/dashboard.html
+++ b/RMS/data/dashboard.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta http-equiv="refresh" content="10">
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" href="arduino.css">
@@ -30,7 +31,7 @@
         <p><a href="/SafeLock">Lock Safe</a></p>
         <p><a href="/SafeUnlock">Unlock Safe</a></p>
     </div>
-    <div>
+    
         <div>
             <p>Fan Control</p>
             <p>%FANCONTROL%</p>
@@ -38,7 +39,7 @@
             <p><a href="/FanManualOff">Turn Fan Off</a></p>
             <p><a href="/FanControl">Fan Automatic/Manual</a></p>
         </div>
-    </div>
+
     <div>LogEvents<p><a href="/logOutput">Download</a></div>
     <div>
         <p><a href="/LEDOn">Turn LED On</a></p>
