--- a/RMS/data/admin.html
+++ b/RMS/data/admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="refresh" content="10">
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Administrator</title>
     <link rel="stylesheet" href="arduino.css">
 </head>
 
@@ -12,12 +12,12 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="/admin.html">Admin</a></li>
-        <li class="active"><a href="/dashboard.html">Dashboard</a></li>
-    </ul> 
+        <li><a href="/dashboard.html">Dashboard</a></li>
+        <li class="active"><a href="/admin.html">Admin</a></li>
+    </ul>
 </nav>
 
-<h1>Status Dashboard</h1>
+<h1 class="guest">Administrator</h1>
 
 <div class="grid-container">
     <div class="banner">Title</div>
