Made the web portal look nicer

--- a/RMS/data/index.html
+++ b/RMS/data/index.html
@@ -6,17 +6,36 @@
     <title>Homepage</title>
 </head>
 <body>
+    <!-- 
 <nav>
     <ul>
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="/dashboard.html">Dashboard</a></li>
+        <li><a href="/admin.html">Admin</a></li>
     </ul>
 </nav>
-<h1>Welcome to the the Remote Monitoring Station</h1>
+-->
+<div class="dropdown"> 
+    <button class="dropbtn"><strong>Menu</strong></button>
+    <div class="dropdown-content">
+        <a  class="active" href="index.html">Home</a>
+        <a href="/admin.html">Admin</a>
+        <a  href="/dashboard.html">Dashboard</a>
+    </div>
+
+
+
+
+</div>
+
+
+
+
+
+<h1 class="index-heading">Welcome to the the Remote Monitoring Station</h1>
 <p>Use the Navigation to work your way around the site</p>
 <p>Update this page as an introduction to the component/site/arduino.</p>
-<p>TODO: Include a picture as necessary.</p>
-
+<img src="LakeBurleyGriffin.jpg">
 </body>
 </HTML>
 
