--- a/RMS/data/dashboard.html
+++ b/RMS/data/dashboard.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- 
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -16,11 +17,30 @@
         <li class="active"><a href="/dashboard.html">Dashboard</a></li>
     </ul> 
 </nav>
+-->
+<div class="dropdown"> 
+   
+    <button class="dropbtn"><strong>Menu</strong></button>
+    <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="/admin.html">Admin</a>
+        <a class="active" href="/dashboard.html">Dashboard</a>
+    </div>
+   
+
+
+
+</div>
+
+
+
+
+
 
 <h1>Status Dashboard</h1>
 
 <div class="grid-container">
-    <div class="banner">Title</div>
+    <div class="banner">Floating Hotel Pod Control</div>
     <div><p>Date and Time </p>
         <p>%DATETIME% *</p></div>
     <div>
@@ -29,28 +49,47 @@
     </div>
     <div>
         <p>Current state of safe</p> <p>%SAFESTATE%</p>
+      <!--  
         <p><a href="/SafeLock">Lock Safe</a></p>
-        <p><a href="/SafeUnlock">Unlock Safe</a></p>
+        <p><a href="/SafeUnlock">Unlock Safe</a></p> 
+      -->
+        <p> <input type="button" class="BUTTON" onclick="href='/SafeUnlock';" value="Unlock Safe" /> </p>
+        <p> <input type="button" class="BUTTON" onclick="href='/SafeLock';" value="Lock Safe" /> </p>
     </div>
     
         <div>
             <p>Fan Control</p>
             <p>%FANCONTROL%</p>
+             <!-- 
             <p><a href="/FanManualOn">Turn Fan On</a></p>
             <p><a href="/FanManualOff">Turn Fan Off</a></p>
             <p><a href="/FanControl">Fan Automatic/Manual</a></p>
+            -->
+
+            <p> <input type="button" class="BUTTON" onclick="href='/FanManualOn';" value="Turn Fan On" /> </p>
+            <p> <input type="button" class="BUTTON" onclick="href='/FanManualOff';" value="Turn Fan Off" /> </p>
+            <p> <input type="button" class="BUTTON" onclick="href='/FanControl';" value="Fan Automatic/Manual" /> </p>
+
+
+
         </div>
 
-    <div>LogEvents<p><a href="/logOutput">Download</a></div>
+    <!--   
+        <div>
+            LogEvents<p><a href="/logOutput">Download</a>
+        </div>
     <div>
         <p><a href="/LEDOn">Turn LED On</a></p>
         <p><a href="/LEDOff">Turn LED Off</a></p>
-    </div>
+    </div>          
+      -->
+    
+   
 
 </div>
-
+<!--
 <sup class="tinyText">* Example of HTML/Arduino Variable</sup>
-
+-->
 
 </body>
 
