update on html, got buttons to work as links

--- a/RMS/data/index.html
+++ b/RMS/data/index.html
@@ -19,8 +19,9 @@
     <button class="dropbtn"><strong>Menu</strong></button>
     <div class="dropdown-content">
         <a  class="active" href="index.html">Home</a>
-        <a href="/admin.html">Admin</a>
-        <a  href="/dashboard.html">Dashboard</a>
+        <a href="admin.html">Admin</a>
+        <a  href="dashboard.html">Dashboard</a>
+        
     </div>
 
 
