--- a/RMS/data/admin.html
+++ b/RMS/data/admin.html
@@ -12,8 +12,8 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="/dashboard.html">Dashboard</a></li>
-        <li class="active"><a href="/admin.html">Admin</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
+        <li class="active"><a href="admin.html">Admin</a></li>
     </ul>
 </nav>
 
