improved website functionality and made website look nicer

--- a/RMS/data/index.html
+++ b/RMS/data/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="arduino.css">
     <meta charset="UTF-8">
-    <title>Homepage</title>
+    <title>Welocme to CBR floating hotel</title>
 </head>
 <body>
     <!-- 
@@ -33,10 +33,13 @@
 
 
 
-<h1 class="index-heading">Welcome to the the Remote Monitoring Station</h1>
-<p>Use the Navigation to work your way around the site</p>
-<p>Update this page as an introduction to the component/site/arduino.</p>
-<img src="LakeBurleyGriffin.jpg">
+<h1 class="index-heading">Welcome to Canberra floating hotel</h1>
+<p>The Canberra floating hotel is revoluntionary in the way it is a floating hotel and offers control of your room from a remote website, this website offers remote control of your hotel pod right from your own phone. </p>
+<p>Click the image below for things to do in Canberra during your stay at the Canberra floating hotel</p>
+<a href="https://visitcanberra.com.au/articles/top-10-things-to-do-in-canberra" target="_blank">
+<img border="0"  alt="Image of lake Lake Burley Griffin" src="LakeBurleyGriffin.jpg" width="1900
+" height="650">
+</a>
 </body>
 </HTML>
 
