--- a/RMS/data/admin.html
+++ b/RMS/data/admin.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="10">
+   
     <meta charset="UTF-8">
     <title>Administrator</title>
     <link rel="stylesheet" href="arduino.css">
@@ -45,6 +45,14 @@
     <div>
         <p><a href="/LEDOn">Turn LED On</a></p>
         <p><a href="/LEDOff">Turn LED Off</a></p>
+    </div>
+    <div>
+        <p>Set Temperature Threshold</p>
+        <form action="/setTemperatureThreshold">
+            Temperature Threshold <br>
+            <input type="number" name="tempThreshold" value="%CURRENTTHRESHOLD%">
+            <input type="submit" value="Submit">
+        </form><br>
     </div>
 
 </div>
